Source/WebGPU/WGSL/tests/valid/scope.wgsl
// RUN: %wgslc

fn testScope() {
    {
        let x : i32 = 0;
    }

    {
        let x : f32 = 0;
    }
}
